@startuml
!pragma layout smetana
title Download Strategy Classes
class PluginEndpointDefinition
class LinkDiscoveryDefinition
class ResolvedDownload
class DirectHttpDownloadStrategy
class HtmlLinkDiscoveryStrategy
class HtmlLinkResolver
class HttpClient
PluginEndpointDefinition --> LinkDiscoveryDefinition : optional
HtmlLinkDiscoveryStrategy --> HtmlLinkResolver
HtmlLinkDiscoveryStrategy --> DirectHttpDownloadStrategy
DirectHttpDownloadStrategy --> HttpClient
DirectHttpDownloadStrategy --> ResolvedDownload
HtmlLinkResolver --> LinkDiscoveryDefinition
@enduml
